adds function definition and calling to the interpreter